[gd_scene load_steps=13 format=3 uid="uid://crptm3tpqf23q"]

[ext_resource type="Script" uid="uid://dwlo11ont4xx0" path="res://Scenes/MainMenu/main_menu.gd" id="1_behrf"]
[ext_resource type="PackedScene" uid="uid://becekjbr5mdjl" path="res://Objects/Terrain3D/terrain3D.tscn" id="2_bkc2w"]
[ext_resource type="Texture2D" uid="uid://cvh2t25q6jq0h" path="res://Art/Images/sea.png" id="3_0unh6"]
[ext_resource type="Texture2D" uid="uid://bmh56nspmxqck" path="res://Art/Images/TripleShot.svg" id="3_e5jsv"]
[ext_resource type="Script" uid="uid://dv6jljohwnipd" path="res://Scenes/MainMenu/camera_orbiter.gd" id="3_id83c"]
[ext_resource type="Texture2D" uid="uid://bosppbg8rh2nd" path="res://Art/Images/DoubleShot.svg" id="4_3mej2"]
[ext_resource type="Texture2D" uid="uid://bnnkxtf7jj6b7" path="res://Art/Images/CanvasBackgroundSandParticles.png" id="5_ihuk2"]
[ext_resource type="Texture2D" uid="uid://buyvs5rpxo1ah" path="res://Art/Images/TropicalTanks.png" id="9_egttt"]

[sub_resource type="PlaneMesh" id="PlaneMesh_1736k"]
size = Vector2(10, 10)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hpb0f"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_o6tuq"]
sky_material = SubResource("ProceduralSkyMaterial_hpb0f")

[sub_resource type="Environment" id="Environment_pc2jd"]
background_mode = 2
sky = SubResource("Sky_o6tuq")
tonemap_mode = 2
glow_enabled = true

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_behrf")

[node name="Terrain3D" parent="." instance=ExtResource("2_bkc2w")]

[node name="BackgroundSprite" type="Sprite3D" parent="."]
transform = Transform3D(0.71, 0, 0, 0, -3.10351e-08, -0.71, 0, 0.71, -3.10351e-08, 27.25, 0, 0)
texture = ExtResource("5_ihuk2")

[node name="SeaSprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 70.8326, 0, 0)
texture = ExtResource("3_0unh6")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 30, 0)
script = ExtResource("3_id83c")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(50, 0, 0)

[node name="GroundPlane" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)
mesh = SubResource("PlaneMesh_1736k")

[node name="WorldEnvironment" type="WorldEnvironment" parent="GroundPlane"]
environment = SubResource("Environment_pc2jd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="GroundPlane"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 217.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="HowToPlayButton" type="Button" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "How To Play"

[node name="QuitButton" type="Button" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 29.0
offset_right = 79.0
offset_bottom = 394.0
grow_horizontal = 2
scale = Vector2(0.935465, 0.869362)
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer2"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
texture = ExtResource("9_egttt")
expand_mode = 3
stretch_mode = 5

[node name="CreditsButton" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
text = "Credits"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 772.0
offset_top = 395.0
offset_right = 861.0
offset_bottom = 484.0
texture = ExtResource("4_3mej2")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
offset_left = 890.0
offset_top = 395.0
offset_right = 979.0
offset_bottom = 484.0
texture = ExtResource("3_e5jsv")
expand_mode = 1

[connection signal="pressed" from="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
